--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,8 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: '^1.13.1' # The Go version to download (if necessary) and use.
-
+        cache: false
+        
     - name: Install MSYS
       uses: msys2/setup-msys2@v2
       with:
