--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: '^1.13.1' # The Go version to download (if necessary) and use.
-        cache: false
+        go-version: '1.13.1' # The Go version to download (if necessary) and use.
+        check-latest: true
         
     - name: Install MSYS
       uses: msys2/setup-msys2@v2
